[tool.poetry]
name = "py-boilerplate"
version = "0.1.0"
description = "Personal Python Boilerplate"
authors = ["Starcea <stardev.uwu@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/star0202/py-boilerplate"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.style.dependencies]
black = "^24.0.0"
isort = "^5.12.0"

[tool.poetry.group.type.dependencies]
mypy = "^1.4.1"

[tool.isort]
profile = "black"

[tool.mypy]
files = ["src"]
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
